fix swagger & search channel return value
