# channel/views.py
@@ -104,7 +104,7 @@ class SearchChannel(APIView):
                 for channel in Channels:
                     data.append({
                         'name': channel.name,
-                        'description': channel.description,
+                        'consultant_full_name': channel.consultant.first_name + " " + channel.consultant.last_name ,
                         'invite_link': channel.invite_link,
                     })
             else:
@@ -112,7 +112,7 @@ class SearchChannel(APIView):
                 for channel in Channels:
                     data.append({
                         'name': channel.name,
-                        'description': channel.description,
+                        'consultant_full_name': channel.consultant.first_name + " " + channel.consultant.last_name ,
                         'invite_link': channel.invite_link,
                     })
 
@@ -122,7 +122,7 @@ class SearchChannel(APIView):
                                 status=status.HTTP_500_INTERNAL_SERVER_ERROR)    
 
 class SuggestionChannel(APIView):
-    permission_classes = [IsAuthenticated]
+    permission_classes = []
     def get(self, request, format=None):
         try:
             data = []
@@ -130,7 +130,7 @@ class SuggestionChannel(APIView):
             for channel in Channels:
                 data.append({
                     'name': channel.name,
-                    'description': channel.description,
+                    'consultant_full_name': channel.consultant.first_name + " " + channel.consultant.last_name ,
                     'invite_link': channel.invite_link,
                 })
             return Response({'data': data}, status=status.HTTP_200_OK)
